--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <EditText
+    <com.amrdeveloper.codeview.CodeView
         android:id="@+id/code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
