--- a/app/src/main/res/layout/nodeview.xml
+++ b/app/src/main/res/layout/nodeview.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:background="@drawable/bg_node_view">
 
-    <com.github.chen0040.androidcodeview.SourceCodeView
+    <TextView
         android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
