--- a/app/src/main/res/layout/nodeview.xml
+++ b/app/src/main/res/layout/nodeview.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="12dp"
     android:layout_gravity="center"
     android:background="@drawable/bg_node_view">
 
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textSize="18sp" />
+<!--    <TextView-->
+<!--        android:id="@+id/txt"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:textSize="18sp" />-->
 
 </RelativeLayout>
