--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:id="@+id/drag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:checked="true"
         style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
         android:layout_centerHorizontal="true"
         android:text="Lock Drag"/>
