--- a/app/src/main/res/layout/nodeview.xml
+++ b/app/src/main/res/layout/nodeview.xml
@@ -3,15 +3,60 @@
     android:id="@+id/root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="12dp"
     android:layout_gravity="center"
     android:background="@drawable/bg_node_view">
 
-<!--    <TextView-->
-<!--        android:id="@+id/txt"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:textSize="18sp" />-->
+    <RelativeLayout
+        android:id="@+id/topView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/bg_node_view_top">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="12dp"
+            android:fontFamily="@font/jaldi"
+            android:text="@string/sample_title"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp" />
+
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/settings" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/mainView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topView"
+        android:orientation="horizontal"
+        android:gravity="center"/>
+
+    <RelativeLayout
+        android:id="@+id/bottom_view"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_below="@+id/mainView"
+        android:background="@drawable/bg_node_view_bottom">
+
+    </RelativeLayout>
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/txt"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_centerInParent="true"-->
+    <!--        android:textSize="18sp" />-->
 
 </RelativeLayout>
