--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
     tools:context=".MainActivity">
 
     <include
@@ -16,9 +15,10 @@
     <com.amrdeveloper.codeview.CodeView
         android:id="@+id/code"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/center"
         android:hint="Code here ..."
+        android:gravity="top"
         android:background="@color/white"/>
 
     <com.google.android.material.button.MaterialButton
@@ -26,23 +26,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_margin="8dp"
         android:text="Focus Center"/>
 
     <com.google.android.material.materialswitch.MaterialSwitch
         android:id="@+id/drag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
-        android:text="Lock Drag"/>
+        android:text="Code To Node"/>
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/choose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/bg_node_view"
+        style="@style/SpinnerTheme"
         android:paddingVertical="4dp"
         android:paddingHorizontal="24dp"
+        android:layout_margin="8dp"
+        android:popupElevation="8dp"
         android:spinnerMode="dropdown" />
 
 
