--- a/app/src/main/res/layout/node.xml
+++ b/app/src/main/res/layout/node.xml
@@ -3,4 +3,5 @@
     android:id="@+id/treeview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     android:background="@color/white"/>
