--- a/app/src/main/res/layout/nodeview.xml
+++ b/app/src/main/res/layout/nodeview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
-    android:layout_width="wrap_content"
+    android:layout_width="400dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@drawable/bg_node_view">
@@ -10,7 +10,10 @@
         android:id="@+id/topView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
         android:background="@drawable/bg_node_view_top">
 
         <TextView
@@ -46,17 +49,23 @@
     <RelativeLayout
         android:id="@+id/bottom_view"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/mainView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/bg_node_view_bottom">
 
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"
+            android:text="@string/node_id_001"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
     </RelativeLayout>
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/txt"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_centerInParent="true"-->
-    <!--        android:textSize="18sp" />-->
+
 
 </RelativeLayout>
