--- a/app/src/main/res/anim/slide_out.xml
+++ b/app/src/main/res/anim/slide_out.xml
@@ -2,11 +2,11 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:interpolator/accelerate_quad">
     <translate
+        android:duration="@integer/slideAnim"
         android:fromYDelta="100%p"
-        android:toYDelta="0%p"
-        android:duration="@integer/slideAnim"/>
+        android:toYDelta="0%p" />
     <alpha
+        android:duration="@integer/slideAnim"
         android:fromAlpha="1.0"
-        android:toAlpha="0.0"
-        android:duration="@integer/slideAnim"/>
+        android:toAlpha="0.0" />
 </set>
