--- a/app/src/main/res/layout/method_node.xml
+++ b/app/src/main/res/layout/method_node.xml
@@ -7,7 +7,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:text="@string/app_name" />
 
 </RelativeLayout>
