--- a/app/src/main/res/layout/nodeview.xml
+++ b/app/src/main/res/layout/nodeview.xml
@@ -43,8 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/topView"
-        android:orientation="horizontal"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:orientation="horizontal" />
 
     <RelativeLayout
         android:id="@+id/bottom_view"
@@ -65,7 +65,6 @@
             android:textColor="@color/white"
             android:textSize="14sp" />
     </RelativeLayout>
-
 
 
 </RelativeLayout>
